--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "airr-react",
 	"version": "2.0.0",
-	"description": "Reusable React components for building mobile hybrid apps",
+	"description": "Reusable React components for building Single Page Apps.",
 	"dependencies": {
 		"immutability-helper": "^2.5.0",
 		"prop-types": "^15.6.0",
@@ -14,11 +14,12 @@
 	"keywords": [
 		"react",
 		"react-components",
-		"cordova",
+		"SPA",
+		"PWA",
 		"mobile",
 		"hybrid",
-		"app",
-		"frontend"
+		"cordova",
+		"phonegap"
 	],
 	"author": "Rafal Rajtar",
 	"license": "MIT",
