--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"babel-core": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
-		"babel-preset-stage-0": "^6.24.1"
+		"babel-preset-stage-0": "^6.24.1",
+		"esdoc": "^1.1.0",
+		"esdoc-standard-plugin": "^1.0.0"
 	}
 }
