--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-core": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-env": "^1.7.0",
 		"babel-preset-react": "^6.24.1",
-		"babel-preset-stage-0": "^6.24.1",
+		"babel-preset-stage-2": "^6.24.1",
 		"esdoc": "^1.1.0",
 		"esdoc-standard-plugin": "^1.0.0"
 	}
