--- a/storybook/package.json
+++ b/storybook/package.json
@@ -25,6 +25,7 @@
         "@storybook/addons": "^3.4.6",
         "@storybook/react": "^3.4.6",
         "babel-core": "^6.26.3",
-        "babel-runtime": "^6.26.0"
+        "babel-runtime": "^6.26.0",
+        "raw-loader": "^0.5.1"
     }
 }
