--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -5,12 +5,18 @@
     "babel-polyfill": "^6.26.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "1.0.17"
+    "react-scripts": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
