--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
-	"compilerOptions": {
-		"outDir": "./dist2/",
-		"sourceMap": true,
-		"noImplicitAny": true,
-		"module": "commonjs",
-		"target": "es5",
-		"jsx": "react"
-	},
-	"include": ["./lib2/**/*"]
+    "compilerOptions": {
+        "outDir": "./dist2/",
+        "sourceMap": true,
+        "noImplicitAny": true,
+        "module": "commonjs",
+        "target": "es5",
+        "jsx": "react",
+        "lib": ["es5", "es6", "es7", "es2017", "dom"]
+    },
+    "include": ["./lib/**/*"]
 }
