--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "3.0.1",
     "description": "Reusable React components for building Single Page Apps.",
     "dependencies": {
-        "immutability-helper": "^2.9.1",
-        "prop-types": "^15.7.2",
+        "immutability-helper": "^2.9.1"
+    },
+    "peerDependencies": {
         "react": "^16.8.3"
     },
     "main": "airr-react.js",
