--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-    "presets": ["env", "react", "stage-2"],
-    "comments": false
+    "presets": ["@babel/env", "@babel/typescript", "@babel/react"],
+    "plugins": ["@babel/proposal-class-properties", "@babel/proposal-object-rest-spread"]
 }
