--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "main": "airr-react.js",
     "scripts": {
         "eslint": "eslint lib/*",
-        "build": "babel lib -d dist --copy-files --ignore '*.mkd'",
-        "build2": "webpack"
+        "type-check": "tsc --noEmit",
+        "type-check:watch": "npm run type-check -- --watch",
+        "build": "npm run build:types && npm run build:js",
+        "build:types": "tsc --emitDeclarationOnly",
+        "build:js": "babel lib --out-dir dist --copy-files --extensions \".ts,.tsx\" --source-maps inline",
+        "build-webpack": "webpack"
     },
     "keywords": [
         "react",
         "react-components",
         "SPA",
-        "PWA",
+        "navigation",
         "mobile",
         "hybrid",
         "cordova",
@@ -31,25 +35,26 @@
         "url": "git+https://github.com/rafal-r/airr-react"
     },
     "devDependencies": {
-        "@types/react": "^16.8.5",
-        "@typescript-eslint/eslint-plugin": "^1.4.2",
-        "@typescript-eslint/parser": "^1.4.2",
-        "acorn": "^6.1.0",
+        "@babel/cli": "^7.2.3",
+        "@babel/core": "^7.4.0",
+        "@babel/plugin-proposal-class-properties": "^7.4.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
+        "@babel/preset-env": "^7.4.1",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/preset-typescript": "^7.3.3",
+        "@types/react": "^16.8.12",
+        "@typescript-eslint/eslint-plugin": "^1.6.0",
+        "@typescript-eslint/parser": "^1.6.0",
+        "acorn": "^6.1.1",
         "awesome-typescript-loader": "^5.2.1",
-        "babel-cli": "^6.26.0",
-        "babel-core": "^6.26.3",
-        "babel-eslint": "^10.0.1",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-2": "^6.24.1",
-        "eslint": "^5.14.1",
+        "eslint": "^5.16.0",
         "eslint-config-prettier": "^4.1.0",
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "^7.12.4",
         "prettier": "^1.16.4",
         "source-map-loader": "^0.2.4",
-        "typescript": "^3.3.3333",
-        "webpack": "^4.29.5",
-        "webpack-cli": "^3.2.3"
+        "typescript": "^3.4.1",
+        "webpack": "^4.29.6",
+        "webpack-cli": "^3.3.0"
     }
 }
