--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,15 @@
 node_modules
+storybook
+lib
+dist2
+.vscode
 .babelrc
 package-lock.json
-nbproject
-lib
-demo-app
 CONTRIBUTING.md
-.esdoc.json
-storybook
-docs
 .gitignore
 .flowconfig
 .eslintrc.js
 .prettierrc
-.vscode
+.tsconfig.json
+webpack.config.js
+todo.txt
