--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "eslint": "eslint lib/*",
         "type-check": "tsc --noEmit",
         "type-check:watch": "npm run type-check -- --watch",
-        "build": "npm run build:types && npm run build:js",
+        "build": "npm run type-check && npm run build:js",
         "build:types": "tsc --emitDeclarationOnly",
         "build:js": "babel lib --out-dir dist --copy-files --extensions \".ts,.tsx\" --source-maps inline",
         "build-webpack": "webpack"
