--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react",
         "react-components",
         "SPA",
+        "single page app",
         "navigation",
         "mobile",
         "hybrid",
