--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "main": "airr-react.js",
     "scripts": {
         "eslint": "eslint lib/*",
+        "test": "jest test",
         "type-check": "tsc --noEmit",
         "type-check:watch": "npm run type-check -- --watch",
         "build": "npm run type-check && npm run build:js",
@@ -52,10 +53,15 @@
         "acorn": "^6.1.1",
         "awesome-typescript-loader": "^5.2.1",
         "babel-loader": "^8.0.5",
+        "babel-polyfill": "^6.26.0",
+        "enzyme": "^3.9.0",
+        "enzyme-adapter-react-16": "^1.13.0",
         "eslint": "^5.16.0",
         "eslint-config-prettier": "^4.1.0",
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "^7.12.4",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^24.8.0",
         "prettier": "^1.16.4",
         "react": "^16.8.6",
         "react-docgen-typescript": "^1.12.3",
@@ -65,6 +71,12 @@
         "typescript": "^3.4.1",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.3.0"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+            "\\.(css|less)$": "identity-obj-proxy"
+        }
     },
     "browserslist": [
         ">1%",
