--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "main": "airr-react.js",
     "scripts": {
         "eslint": "eslint lib/*",
-        "test": "jest test",
+        "test": "jest",
         "type-check": "tsc --noEmit",
         "type-check:watch": "npm run type-check -- --watch",
         "build": "npm run type-check && npm run build:js",
