--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
         "react": "^16.8.3"
     },
     "main": "airr-react.js",
+    "types": "./types/Airr.d.ts",
     "scripts": {
         "eslint": "eslint lib/*",
         "test": "jest",
         "type-check": "tsc --noEmit",
         "type-check:watch": "npm run type-check -- --watch",
-        "build": "npm run type-check && npm run build:js",
+        "build": "npm run build:types && npm run build:js",
         "build:types": "tsc --emitDeclarationOnly",
         "build:js": "babel lib --out-dir dist --copy-files --extensions \".ts,.tsx\" --source-maps inline",
         "build-webpack": "webpack"
