--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     // "typescript.validate.enable": false,
     "javascript.format.enable": false,
-    "prettier.eslintIntegration": true,
     "editor.tabSize": 4,
     "editor.detectIndentation": false,
     "editor.insertSpaces": true,
@@ -18,17 +17,7 @@
     "[typescriptreact]": {
         "editor.formatOnSave": false
     },
-    "eslint.autoFixOnSave": true,
-    "eslint.validate": [
-        "javascript",
-        "javascriptreact",
-        {
-            "language": "typescript",
-            "autoFix": true
-        },
-        {
-            "language": "typescriptreact",
-            "autoFix": true
-        }
-    ]
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    }
 }
